--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
-    <title>Lock Screen</title>
+    <title>Lock Screen ahihi!</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css" />
@@ -31,15 +31,33 @@
           <div class="mhn-lock-title" data-title="Draw a pattern to unlock">Draw a pattern to unlock</div>
           <div class="mhn-lock patt-holder" style="width: 270px; height: 270px; position: relative">
             <ul class="patt-wrap" style="padding: 15px">
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
-              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px"><div class="patt-dots"></div></li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
+              <li class="patt-circ" style="margin: 15px; width: 50px; height: 50px; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px">
+                <div class="patt-dots"></div>
+              </li>
             </ul>
           </div>
         </div>
@@ -148,7 +166,9 @@
       <div class="mhn-ui-page page-author" style="display: none">
         <div class="mhn-ui-app-time">3:13:16 PM</div>
         <div class="mhn-ui-app-title-head"><span class="ion-person"></span> Author</div>
-        <div class="text-center"><img class="flipInX animated" src="https://s.gravatar.com/avatar/d20a97c43d5b71cae939da56a5cc8c59?s=128" alt="@khadkamhn" /></div>
+        <div class="text-center">
+          <img class="flipInX animated" src="https://s.gravatar.com/avatar/d20a97c43d5b71cae939da56a5cc8c59?s=128" alt="@khadkamhn" />
+        </div>
         <p class="text-center">Hi, It's me Thanh. I'm a web and graphics designer. Designing is my passion and I have been working on various designing projects.</p>
         <div class="mhn-ui-bottom-link-bar">
           <span class="mhn-ui-bottom-btn ion-ios-home" onclick="mhnUI.page.show('page-home')"></span>
@@ -160,8 +180,12 @@
         <div class="mhn-ui-app-time">3:13:16 PM</div>
         <div class="mhn-ui-app-title-head"><span class="ion-chatbox"></span> Contact</div>
         <p><a href="mailto:khadkamhn@gmail.com">khadkamhn@gmail.com</a></p>
-        <p><a href="mailto:contact@mohankhadka.com.np">contact@mohankhadka.com.np</a></p>
-        <p><a href="http://mohankhadka.com.np" target="_blank">http://mohankhadka.com.np</a></p>
+        <p>
+          <a href="mailto:contact@mohankhadka.com.np">contact@mohankhadka.com.np</a>
+        </p>
+        <p>
+          <a href="http://mohankhadka.com.np" target="_blank">http://mohankhadka.com.np</a>
+        </p>
         <div class="mhn-ui-bottom-link-bar">
           <span class="mhn-ui-bottom-btn ion-ios-home" onclick="mhnUI.page.show('page-home')"></span>
           <span class="mhn-ui-bottom-btn ion-ios-locked" onclick="mhnUI.page.show('page-lock')"></span>
